src/main/java/com/example/finalprojectdtomarket/errors/exception/Exception403.java
package com.example.finalprojectdtomarket.errors.exception;

public class Exception403 extends RuntimeException {
    public Exception403(String msg) {
        super(msg);
    }
}
